// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeString fails when given a string literal 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeString()</intensity>

Expected value to not be of type string received:
  <red>""</color>"
`;

exports[`.not.toBeString fails when given an object of type string 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeString()</intensity>

Expected value to not be of type string received:
  <red>{"0": "s", "1": "t", "10": "e", "2": "r", "3": "i", "4": "n", "5": "g", "6": " ", "7": "t", "8": "y", "9": "p"}</color>"
`;

exports[`.toBeString fails when not given a string 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeString()</intensity>

Expected value to be of type string:
  <green>"type of string"</color>
Received:
  <red>"number"</color>"
`;
